# mpci

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac  libtool  mpci_config.h  mpci_config.h.in  notes.txt  stamp-h1
src/: Makefile  Makefile.am  Makefile.in  abs.c  add.c  add_fi.c  add_fi.lo  add_si.c  add_si.lo  arg.c  arg.lo  clear.c  conj.c  conj.lo  diam_abs_sup.c  diam_abs_sup.lo  div.c  div_fi.c  div_fi.lo  div_si.c  div_si.lo  error_box.c  error_box.lo  exp.c  exp.lo  fi_div.c  fi_div.lo  fi_mul_imagsi.c  fi_mul_imagsi.lo  fi_sub.c  fi_sub.lo  get_imag.c  get_imag.lo  get_prec.c  get_prec.lo  get_real.c  get_real.lo  has_zero.c  has_zero.lo  init.c  (+55 more)
src/.deps/: abs.Plo  add.Plo  add_fi.Plo  add_si.Plo  arg.Plo  clear.Plo  conj.Plo  diam_abs_sup.Plo  div.Plo  div_fi.Plo  div_si.Plo  error_box.Plo  exp.Plo  ext_mpfi_bounding_pow_si.Plo  ext_mpfi_bounding_zeta_si.Plo  ext_mpfi_fac_ui.Plo  ext_mpfi_zeta_ui.Plo  fi_div.Plo  fi_mul_imagsi.Plo  fi_sub.Plo  get_imag.Plo  get_prec.Plo  get_real.Plo  has_zero.Plo  init.Plo  intersect.Plo  inv.Plo  is_empty.Plo  is_inside.Plo  log.Plo  mul.Plo  mul_2si.Plo  mul_fi.Plo  mul_imagsi.Plo  mul_si.Plo  neg.Plo  polylog.Plo  (+23 more)
tests/: Makefile  Makefile.am  Makefile.in  check_data_mpci_fun_mpci.c  check_data_mpci_fun_mpci_mpci.c  check_data_mpci_fun_mpci_si.c  check_data_mpci_fun_si_mpci.c  check_data_mpfi_fun_si.c  compare_results.c  formatting.c  mpci-tests.h  read_data.c  tadd.c  tadd_si.c  tdiv.c  tdiv_si.c  tlog.c  tmul.c  tmul_si.c  tsi_div.c  tsi_sub.c  tsub.c  tsub_si.c
(+32 files in other folders)
