lib_LTLIBRARIES = libmpci.la

libmpci_la_SOURCES = mpci-impl.h \
   abs.c add.c add_fi.c add_si.c arg.c clear.c conj.c diam_abs_sup.c div.c \
   div_fi.c div_si.c error_box.c exp.c fi_div.c fi_mul_imagsi.c fi_sub.c \
   get_imag.c get_prec.c get_real.c has_zero.c init.c intersect.c inv.c \
   is_empty.c is_inside.c log.c mul.c mul_2si.c mul_imagsi.c mul_fi.c mul_si.c \
   neg.c pow_si.c predicates.c put.c set.c set_fi.c set_fi_fi.c set_prec.c \
   set_si.c set_si_si.c si_div.c si_sub.c sqr.c sqrt.c sub.c sub_fi.c sub_si.c \
   swap.c union.c upper_abs.c upper_sqr_abs.c

AM_CPPFLAGS =-I$(top_srcdir)
